Updated to use Java 11, and use new GC for smoothness.